flask-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose -f docker-compose.local.yml convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: flask-api
  name: flask-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: flask-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ./kompose -f docker-compose.local.yml convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: flask-api
    spec:
      containers:
        - image: simple-fask-api-image
          name: simple-fask-api
          ports:
            - containerPort: 8000
          resources: {}
          stdin: true
          tty: true
      hostname: simple-fask-api
      restartPolicy: Always
status: {}
